[BUGFIX] Add proper overlay z-index for modals

--- a/Resources/Private/Css/Elements/_Lity.scss
+++ b/Resources/Private/Css/Elements/_Lity.scss
@@ -1,3 +1,7 @@
+.lity-opened {
+  z-index: 99999 !important;
+}
+
 .lity-close {
 
   &:active {
