--- a/Resources/Public/Css/Main.css
+++ b/Resources/Public/Css/Main.css
@@ -841,6 +841,9 @@ body {
   color: #0f0f0f !important;
   text-shadow: 0 1px 0 #9d9d9d !important; }
 
+.lity-opened {
+  z-index: 99999 !important; }
+
 .lity-close {
   position: absolute !important;
   right: -30px !important;
